# difflib

./: .travis.yml  Cargo.toml  README.md
examples/: example.rs
src/: differ.rs  lib.rs  sequencematcher.rs  utils.rs
tests/: test.rs  tests.rs
